--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,29 @@
-# name: "tests"
-# on:
-#   pull_request:
-#   push:
-#     branches:
-#       - master
-#   workflow_dispatch:
-#   schedule:
-#     - cron: '40 0 * * *'
-
-# jobs:
-#   test-linux:
-#     name: Playwright@${{ matrix.playwright}} ${{ matrix.os }} headless=${{ matrix.headless }}
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2019]
-#         playwright: [1.0.0, 1.1.0, 1.2.0, 1.12.0, next]
-#         headless: [true, false]
-#         exclude:
-#           # - os: ubuntu-20.04
-#           #   playwright: 1.0.0
-#           # - os: ubuntu-20.04
-#           #   playwright: 1.1.0
-#           # - os: ubuntu-20.04
-#           #   playwright: 1.2.0
-#           - os: ubuntu-20.04
-#             playwright: latest
-
-#     runs-on: ${{ matrix.os }}
-#     steps:
-#     - uses: actions/checkout@v2
-#     - uses: actions/setup-node@v1
-#     - uses: ./
-#     - name: Install dependencies
-#       run: cd test && npm install playwright@${{ matrix.playwright }}
-#       # Headless running is the same across OSes
-#     - name: Run Playwright (headless)
-#       if: ${{ matrix.headless == true }}
-#       run: cd test && node index.js
-
-#     #   # Headful is different in every OS
-#     # - name: Run Playwright (headful linux)
-#     #   if: ${{ matrix.headless == false && startsWith(matrix.os, 'ubuntu') }}
-#     #   run: cd sample && HEADFUL=true xvfb-run --auto-servernum -- node index.js
-#     # - name: Run Playwright (headful windows)
-#     #   if: ${{ matrix.headless == false && startsWith(matrix.os, 'windows') }}
-#     #   run: cd sample && HEADFUL=true node index.js
-#     #   shell: bash
-#     # - name: Run Playwright (headful mac)
-#     #   if: ${{ matrix.headless == false && startsWith(matrix.os, 'mac') }}
-#     #   run: cd sample && HEADFUL=true node index.js
+name: Playwright Tests
+on:
+  push:
+    branches:
+      - "main"
+  schedule:
+    - cron:  '0 16 * * 1-5' 
+  workflow_dispatch:
+jobs:
+  playwright:
+    name: 'Playwright Tests'
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.36.0-jammy
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: npm ci
+      - name: Run your tests
+        run: npx playwright test
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+         name: playwright-report
+         path: playwright-report/
+         retention-days: 30
