--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Playwright Tests
 on:
   push:
     branches:
-      - "main"
+      - "master"
   schedule:
     - cron:  '0 16 * * 1-5' 
   workflow_dispatch:
