--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Liubov Andriiuk",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.48.2"
+    "@playwright/test": "^1.48.2",
+    "@types/node": "^22.8.6",
+    "dotenv": "^16.4.5"
   }
 }
