--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Liubov Andriiuk",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/compat": "^1.2.2",
     "@eslint/js": "^9.14.0",
     "@faker-js/faker": "^9.2.0",
     "@playwright/test": "^1.48.2",
