--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: Playwright Tests
 on:
   push:
     branches:
-      - "master"
+      - 'master'
   schedule:
-    - cron:  '0 16 * * 1-5' 
+    - cron: '0 16 * * 1-5'
   workflow_dispatch:
 jobs:
   playwright:
@@ -27,6 +27,6 @@ jobs:
       - uses: actions/upload-artifact@v3
         if: always()
         with:
-         name: playwright-report
-         path: playwright-report/
-         retention-days: 30
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
