--- a/package.json
+++ b/package.json
@@ -8,9 +8,29 @@
     "test:headless": "npx playwright test",
     "test:debug": "npx playwright test --ui"
   },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
   "author": "Liubov Andriiuk",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.38.1"
+    "@eslint/compat": "^1.2.2",
+    "@eslint/js": "^9.14.0",
+    "@faker-js/faker": "^9.2.0",
+    "@playwright/test": "^1.48.2",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.8.6",
+    "dotenv": "^16.4.5",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-playwright": "^2.0.1",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0"
   }
 }
