--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,20 @@
 name: Playwright Tests
 on:
-  push:
+  pull_request:
     branches:
-      - 'master'
+      - 'master' 
   schedule:
-    - cron: '0 16 * * 1-5'
+     - cron: '0 16 * * 1-5' 
   workflow_dispatch:
 jobs:
   playwright:
     name: 'Playwright Tests'
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/playwright:v1.38.1-jammy
+      image: mcr.microsoft.com/playwright:v1.48.1-jammy
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
 
@@ -22,9 +22,11 @@ jobs:
         run: npm ci
 
       - name: Run tests
+        env:
+          BASE_URL: ${{ secrets.BASE_URL }}
         run: npm run test:headless
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-report
