--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - 'master' 
   schedule:
-     - cron: '0 16 * * 1-5' 
+     - cron: '0 16 * * 1'
   workflow_dispatch:
 jobs:
   playwright:
